Finished exercise, completed catFood.js, corrected more capitalizations in dogFood.js, finished all of the functions in food.js to populate innerHTML, added a div for catfood cards in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
-	<div id="foodContainer"></div>
+	<div id="dogFoodContainer"></div>
+	<div id="catFoodContainer"></div>
 	<script type="text/javascript" src="./food.js"></script>
 	<script
  	src="https://code.jquery.com/jquery-3.1.1.min.js"
